# tesseract-team-future-projectliquor

./: .gitignore  README.md  init.ipynb  iowa_licor.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py
iowalicor/: dataset.py
iowalicor/data/: preprocessing.py
notebooks/: 01-exploratory-data-analysis.ipynb  02-data-preparation.ipynb  init.ipynb  iowa_licor.ipynb  preprocessing.ipynb  var_classes.ipynb
notebooks/.ipynb_checkpoints/: init-checkpoint.ipynb
src/: dataset.py
