[tool.poetry]
name = "projectliquor"
version = "0.1.0"
description = ""
authors = ["andrerodrig <andrelmarques11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.12"
jupyterlab = "^3.2.0"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
