[tool.poetry]
name = "iowalicor"
version = "0.1.0"
description = ""
authors = ["andrerodrig <andrelmarques11@gmail.com>", "Antônio José <ajsalmeida@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.12"
jupyterlab = "^3.2.0"
pandas = "^1.3.3"
invoke = "^1.6.0"
matplotlib = "^3.4.3"
dask = "^2021.10.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
