[metadata]
name = iowalicor
version = 0.0.1
author = André Rodrigues
author_email = andrelmarques11@gmail.com
description = Package for analysis of the Iowa licor salles dataset.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/ajsalmeida/tesseract-team-future-projectliquor
project_urls =
    Bug Tracker = https://github.com/ajsalmeida/tesseract-team-future-projectliquor/issues

[options]
package_dir =
    = iowalicor
packages = find:
python_requires = >= 3.8
install_requires =
    pandas
    numpy
    matplotlib
    seaborn
    dask
    invoke

[options.extras_require]
dev =
    ipdb
    ipython
all =
    dev

[options.packages.find]
where = iowalicor

classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent